--- a/templates/error/index.html.twig
+++ b/templates/error/index.html.twig
@@ -1,20 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ErrorController!{% endblock %}
+{% block title %}{{ 'Winback Interface | Error'|trans }}{% endblock %}
 
 {% block content %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/public/winback/src/Controller/ErrorController.php'|file_link(0) }}">src/Controller/ErrorController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/public/winback/templates/error/index.html.twig'|file_link(0) }}">templates/error/index.html.twig</a></code></li>
-    </ul>
+<div class="row w-100 h-100">
+    <div class="col-md-3 d-flex justify-content-center sticky-scroll">filter</div>
+    <div class="col-md-9">
+        <h1 class="text-center mb-4">{{ 'Error'|trans }}</h1>
+        <div>error table</div>
+    </div>
 </div>
+
 {% endblock %}
