--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -3,9 +3,9 @@
 {% block title %}{{'Winback Interface | Softwares'|trans}}{% endblock %}
 
 {% block content %}
-    <div class="container d-flex flex-column justify-content-between align-items-center">
+    <div class="d-flex flex-column justify-content-between align-items-center w-100">
         <h1 class="text-center mt-4 mb-4">{{ 'Softwares'|trans }}</h1>
-        <section id="softwareSearch"></section>
+        <!--<section id="softwareSearch"></section>-->
         <!-- ===== ALERT MESSAGES ===== -->
         {% for message in app.flashes('errorSoftware') %}
             <div class="p-3 my-2 rounded-2 alert alert-danger">{{ message|trans }}</div>
@@ -16,8 +16,8 @@
         {% for message in app.flashes('infoSoftware') %}
             <div class="p-3 my-2 rounded-2 alert alert-success">{{ message|trans }}</div>
         {% endfor %}
-        <div class="row w-100">
-            <div class="col-md-3">
+        <div class="row w-100 px-2">
+            <div class="col-md-2 d-flex justify-content-center">
                 <!-- ===== NEW SOFTWARE ===== -->
                 {% if is_granted("ROLE_ADMIN") %}
                 <a class="btn shadow-1 bg-orange btn-outline-orange floatingBtn d-flex align-items-center justify-content-center" 
@@ -33,7 +33,7 @@
                 
                 {% include "software/_filter.html.twig" %}
             </div>
-            <div class="col-md-9">
+            <div class="col-md-10">
                 <!-- ===== SOFTWARE TABLE PER FAMILY ===== -->
                 <div class="d-flex flex-column space-between">
                 
