--- a/templates/error/index.html.twig
+++ b/templates/error/index.html.twig
@@ -4,10 +4,46 @@
 
 {% block content %}
 <div class="row w-100 h-100">
-    <div class="col-md-3 d-flex justify-content-center sticky-scroll">filter</div>
-    <div class="col-md-9">
+    <div class="col-md-3 d-flex flex-column justify-content-center sticky-scroll">
+        {% include "error/_filter.html.twig" %}
+    </div>
+    <div class="col-md-9 d-flex flex-column align-items-center">
         <h1 class="text-center mb-4">{{ 'Error'|trans }}</h1>
-        <div>error table</div>
+        {% for message in app.flashes('app-error-alert') %}
+            <div class="p-3 my-2 rounded-2 alert alert-danger">{{ message }}</div>
+        {% endfor %}
+        <div class="d-flex justify-content-around w-100">
+            <div>
+                <div class="table-responsive">
+                    {# Table of all records #}
+                    <table class="table table-striped table-bordered table-hover w-100">
+                    <thead>
+                    <tr>
+                    <th>{{ 'Error'|trans }}</th>
+                    <th>{{ 'Serial Number'|trans }}</th>
+                    <th>{{ 'Version'|trans }}</th>
+                    <th>{{ 'Date'|trans }}</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for error in errors %}
+                    <tr>
+                    <td>{{error.error}}</td>
+                    <td>{{error.sn}}</td>
+                    <td>{{error.version}}</td>
+                    <td>{{error.date}}</td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                    </table>
+                </div>
+                {{ knp_pagination_render(errors) }}
+            </div>
+            <div>{{ render_chart(errorChart) }}</div>
+        </div>
+
+
+
     </div>
 </div>
 
