--- a/templates/device/info_modals.html.twig
+++ b/templates/device/info_modals.html.twig
@@ -17,7 +17,15 @@
                         </div>
                         <div class="d-flex flex-column justify-content-left w-50 align-self-stretch">
                             <b>{{ 'Device Type'|trans }} :</b>
-                            <div>{{device.deviceFamily}}</div>
+                            <div>
+                                {% if device.deviceFamily.numberId == 10 %}
+                                    HI-TENS
+                                {% elseif device.deviceFamily.numberId == 14 %}
+                                    BACK3TX
+                                {% else %}
+                                    {{ device.deviceFamily }}
+                                {% endif %}
+                            </div>
                         </div>
                     </div>
                     <div class="d-flex justify-content-between align-items-center w-100">
