--- a/templates/device/_filter.html.twig
+++ b/templates/device/_filter.html.twig
@@ -10,13 +10,18 @@
     <!-- Device Type -->
         <h6 class="mt-2">{{ 'Device Type'|trans }}</h6>
         <div class="border border-0" id="collapseDeviceType">
-            {{ form_row(form.categories) }}
+            {{ form_row(form.category) }}
         </div>
     <!-- Device Version -->
         <h6 class="mt-2">{{ 'Device Version'|trans }}</h6>
         <div class="border border-0" id="collapseDeviceVersion">
             {{ form_row(form.version) }}
             {{ form_row(form.version_upload) }}
+        </div>
+    <!-- Device Country -->
+        <h6 class="mt-2">{{ 'Device Country'|trans }}</h6>
+        <div class="border border-0" id="collapseDeviceVersion">
+            {{ form_row(form.country) }}
         </div>
     <!-- Status -->
         <h6 class="mt-2">{{ 'Status'|trans }}</h6>
