--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -42,11 +42,6 @@
                         
                         <div class="accordion-item">
                             <h2 class="text-center accordion-header mt-2 mb-2" id="accordionHeading_{{ family.name }}">
-                                <!--
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="accordionCollapse_{{ family.name }}" aria-expanded="true" aria-controls="accordionCollapse_{{ family.name }}" style="background-color: #f18741c4; color: white;">
-                                    {{ family.name }}
-                                </button>
-                                -->
                                 {% if family.numberId == 10 %}
                                     HI-TENS
                                 {% elseif family.numberId == 14 %}
@@ -143,7 +138,7 @@
                                                 <td class="text-center">
                                                     <div id="comment_left_{{soft.id}}"></div>
                                                     <div class="input-group d-flex justify-content-center flex-nowrap text-break overflow-auto comment-update-form">
-                                                        <textarea class="comment_update_input border border-0 w-100" style="background-color:#ffffff;" type="text" name="nm" value="" data-id="{{soft.id}}">{{soft.updateComment}}</textarea>
+                                                        <textarea class="comment_update_input border border-0 w-100" type="text" name="nm" value="" data-id="{{soft.id}}">{{soft.updateComment}}</textarea>
                                                         <button class="comment_update_button btn btn-dark border-0" type="button" name="name" value="" data-id="{{soft.id}}"><i class="fa-solid fa-check"></i></button>
                                                     </div>
                                                 </td>
