--- a/templates/software/add.html.twig
+++ b/templates/software/add.html.twig
@@ -12,18 +12,8 @@
                     {{ form_errors(form) }}
                 </div>
 
-                <div class="row">
-                    <!--
-                    <div class="col form-field form-inline">
-                        {# {{ form_row(form.name) }} #}
-                    </div>
-                    <div class="col form-field" id="">
-                        {# {{ form_row(form.version) }} #}
-                    </div>
-                    <div class="col form-field" id="">
-                        {# {{ form_row(form.family) }} #}
-                    </div>
-                    -->
+                <div class="row d-flex justify-content-center align-items-center">
+                    <span class="fa-solid fa-cloud-arrow-up" style="display: flex; position: absolute; z-index: -1; font-size: 14em; justify-content: center; color: #acabab81;"></span>
                     <div class="form-field" id="">
                         {{ form_row(form.file) }}
                     </div>
