dark mode + update style

--- a/templates/error/_filter.html.twig
+++ b/templates/error/_filter.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(form, {attr: { id: 'filter', style: "", class: "d-flex flex-column justify-content-center"}}) }}
     <div class="input-group flex-nowrap">
-    <span class="input-group-text mb-3" id="addon-wrapping" style='border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0; background-color: white;'>
+    <span class="input-group-text mb-3" id="addon-wrapping" style='border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0;'>
     <i class="fa-solid fa-magnifying-glass"></i>
     </span>
     {{ form_row(form.q, {attr: { style: 'border-left-style: none; border-top-left-radius: 0; border-bottom-left-radius: 0;'}}) }}
