--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -37,15 +37,15 @@
 
                 <div class="form-outline mb-1 w-100">
                     <div class="input-group flex-nowrap">
-                    <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-user"></i></span>
-                    <input type="text" placeholder="{{ 'Email'|trans }}" name="username" id="inputUsername" class="form-control" required autofocus>
+                    <span class="input-group-text border border-0" id="addon-wrapping"><i class="fa-solid fa-user"></i></span>
+                    <input type="text" placeholder="{{ 'Email'|trans }}" name="username" id="inputUsername" class="form-control border border-0" required autofocus>
                     </div>
                 </div>
                 <div class="form-outline w-100">
                     <div class="input-group flex-nowrap">
-                    <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-lock"></i></span>
-                    <input type="password" placeholder="{{ 'Password'|trans }}" name="password" id="inputPassword" class="form-control" required>
-                    <span class="input-group-text text-secondary" id="addon-wrapping" style="background-color: #ffffff;"><i class="fa-regular fa-eye-slash" id="eyeIcon"></i></span>
+                    <span class="input-group-text border border-0" id="addon-wrapping"><i class="fa-solid fa-lock"></i></span>
+                    <input type="password" placeholder="{{ 'Password'|trans }}" name="password" id="inputPassword" class="form-control border border-0" required>
+                    <span class="input-group-text text-secondary border border-0" id="addon-wrapping"><i class="fa-regular fa-eye-slash" id="eyeIcon"></i></span>
                     </div>
                 </div>
                 
