--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -52,7 +52,7 @@
                             </h2>
                             <div class="accordion-collapse collapse show responsive-table overflow-auto" id="accordionCollapse_{{ family.name }}" aria-labelledby="accordionHeading_{{ family.name }}" data-bs-parent="#accordionSoftware">
                                 
-                                <table class="table table-striped table-hover" id="softTable_{{ family.name }}">
+                                <table class="table table-hover" id="softTable_{{ family.name }}">
                                         {% if is_granted("ROLE_ADMIN") %}
                                         <thead>
                                             <tr>
