--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -9,6 +9,103 @@ $color5 : #100c08;
 $color6 : #acabab;
 //$color5 : ;
 
+@mixin color-mode($mode: light, $root: false) {
+    @if $color-mode-type == "media-query" {
+      @if $root == true {
+        @media (prefers-color-scheme: $mode) {
+          :root {
+            @content;
+          }
+        }
+      } @else {
+        @media (prefers-color-scheme: $mode) {
+          @content;
+        }
+      }
+    } @else {
+      [data-bs-theme="#{$mode}"] {
+        @content;
+      }
+    }
+  }
+
+  :root, [data-bs-theme="light"] {
+    --bs-secondary-bg: #e9ecef;
+    .card {
+        border: var(--bs-card-border-width) solid var(--bs-primary-border-subtle);
+    }
+    .input-group-text {
+        background-color: var(--bs-gray-200);
+    }
+    .form-control {
+        background-color: var(--bs-gray-200);
+    }
+  }
+
+  [data-bs-theme="dark"] {
+    color-scheme: dark;
+    --bs-body-color: #dee2e6;
+    --bs-body-color-rgb: 222,226,230;
+    --bs-body-bg: #212529;
+    --bs-body-bg-rgb: 33,37,41;
+    --bs-emphasis-color: #fff;
+    --bs-emphasis-color-rgb: 255,255,255;
+    --bs-secondary-color: rgba(222, 226, 230, 0.75);
+    --bs-secondary-color-rgb: 222,226,230;
+    --bs-secondary-bg: #343a40;
+    --bs-secondary-bg-rgb: 52,58,64;
+    --bs-tertiary-color: rgba(222, 226, 230, 0.5);
+    --bs-tertiary-color-rgb: 222,226,230;
+    --bs-tertiary-bg: #2b3035;
+    --bs-tertiary-bg-rgb: 43,48,53;
+    --bs-primary-text-emphasis: #6ea8fe;
+    --bs-secondary-text-emphasis: #a7acb1;
+    --bs-success-text-emphasis: #75b798;
+    --bs-info-text-emphasis: #6edff6;
+    --bs-warning-text-emphasis: #ffda6a;
+    --bs-danger-text-emphasis: #ea868f;
+    --bs-light-text-emphasis: #f8f9fa;
+    --bs-dark-text-emphasis: #dee2e6;
+    --bs-primary-bg-subtle: #031633;
+    --bs-secondary-bg-subtle: #161719;
+    --bs-success-bg-subtle: #051b11;
+    --bs-info-bg-subtle: #032830;
+    --bs-warning-bg-subtle: #332701;
+    --bs-danger-bg-subtle: #2c0b0e;
+    --bs-light-bg-subtle: #343a40;
+    --bs-dark-bg-subtle: #1a1d20;
+    --bs-primary-border-subtle: #084298;
+    --bs-secondary-border-subtle: #41464b;
+    --bs-success-border-subtle: #0f5132;
+    --bs-info-border-subtle: #087990;
+    --bs-warning-border-subtle: #997404;
+    --bs-danger-border-subtle: #842029;
+    --bs-light-border-subtle: #495057;
+    --bs-dark-border-subtle: #343a40;
+    --bs-heading-color: inherit;
+    --bs-link-color: #6ea8fe;
+    --bs-link-hover-color: #8bb9fe;
+    --bs-link-color-rgb: 110,168,254;
+    --bs-link-hover-color-rgb: 139,185,254;
+    --bs-code-color: #e685b5;
+    --bs-border-color: #495057;
+    --bs-border-color-translucent: rgba(255, 255, 255, 0.15);
+    --bs-form-valid-color: #75b798;
+    --bs-form-valid-border-color: #75b798;
+    --bs-form-invalid-color: #ea868f;
+    --bs-form-invalid-border-color: #ea868f;
+    //--bs-modal-bg: #343a40 !important;
+    .card {
+        border: var(--bs-card-border-width) solid var(--bs-light-border-subtle);
+    }
+    .input-group-text {
+        background-color: var(--bs-light);
+    }
+    .form-control {
+        background-color: var(--bs-light);
+    }
+  }
+  
 .bg-orange {
     background-color: $color1;
     color: white !important;
@@ -42,7 +139,7 @@ html {
 
 body {
     font-family: 'Open Sans', sans-serif;
-    color: $color5 !important;
+    //color: $color5 !important;
     width: 100%;
     letter-spacing: 0px;
     //font-size: 1em;
@@ -62,10 +159,11 @@ body {
     //justify-content: space-between;
     margin: 0;
     padding: 0 !important;
-    background-color: $color3;
+    //background-color: $color3;
     display: flex;
     flex-direction: column;
     justify-content:space-between;
+    //background-color: var(--bs-secondary-bg);
 }
 
 .container {
@@ -102,7 +200,7 @@ main {
 }
 
 a {
-    color: black;
+    color: var(--bs-body-color);
     text-decoration: none !important;
 }
 
@@ -380,8 +478,8 @@ table.dataTable thead .sorting_desc_disabled:before {
     //width: fit-content;
     width: 100%;
     height: fit-content;
-    -webkit-box-shadow: 5px 5px 15px 5px #acabab; 
-    box-shadow: 5px 5px 15px 5px #acabab;
+    //-webkit-box-shadow: 5px 5px 15px 5px #acabab; 
+    //box-shadow: 5px 5px 15px 5px #acabab;
     font-weight: 500;
 }
 
@@ -398,13 +496,15 @@ background: #eee;
     flex-direction: column;
     align-items: center;
     //justify-content: space-between;
-    border: none;
+    //border: none;
     //box-shadow: 5px 5px 15px 5px #acabab;
     //box-shadow: 0px 0px 2px 2px #acabab81;
     //rgba(0,0,0,0.4)
     .card-body {
         font-size: small;
     }
+    //box-shadow: 0px 0px 2px 2px #acabab81;
+    border-radius: 5px;
 }
 
 .carousel-control-next, .carousel-control-prev {
@@ -443,13 +543,6 @@ background: #eee;
 .example-wrapper code { 
     background: #F5F5F5;
     padding: 2px 6px; 
-}
-
-#listDeviceTable {
-    td {
-        color: $color5;
-        //font-family: 'Gotham Medium', sans-serif;
-    }
 }
 
 .comment_update_input, .actualVersion_update_input {
@@ -495,7 +588,28 @@ background: #eee;
     color: #F5F5F5;
 }
 
+.modal {
+    --bs-modal-bg: var(--bs-secondary-bg);
+}
+
 .modal-dialogue-device {
     --bs-modal-width: 50%;
     font-size: medium;
+}
+
+.card {
+    --bs-card-bg: var(--bs-secondary-bg);
+}
+
+.table {
+    background-color: var(--bs-secondary-bg);
+    border-radius: 5px;
+    thead {
+        background-color: var(--bs-tertiary-bg);
+    }
+}
+
+.accordion-item {
+    color: var(--bs-table-color);
+    background-color: var(--bs-body-bg);
 }
