--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -7,8 +7,8 @@
 
     <div class="container row d-flex align-items-stretch">
         <div class="col-sm-8 col-md-5 col-xl-4 mb-5">
-            <div class="card dashboard-card w-100 h-100" style="box-shadow: 0px 0px 2px 2px #acabab81;">
-                <h3 class="card-header w-100"><div class="text-muted" style="text-transform: uppercase;">Devices</div></h3>
+            <div class="card dashboard-card w-100 h-100">
+                <h3 class="card-header w-100"><div class="" style="text-transform: uppercase;">Devices</div></h3>
                 <div class="card-body d-flex flex-column justify-content-top w-100 h-100 p-0 py-4">
                     <canvas id="myChart" class="text-start"></canvas>
                     {#{{ render_chart(thirdChart) }}#}
@@ -22,12 +22,12 @@
 
                 <div id="carouselExampleIndicators" class="carousel carousel-dark slide w-100">
 
-                <div class="carousel-inner" style="box-shadow: 0px 0px 2px 2px #acabab81; border-radius: 5px;">
+                <div class="carousel-inner">
                     {% for deviceFamily in devicesFamily %}
                     <div class="carousel-item {{ (deviceFamily=="BACK4") ? 'active' : '' }}">
                         <div class="card dashboard-card">
                             
-                            <h3 class="card-header w-100 device_family text-muted" id="{{deviceFamily}}">{{deviceFamily}}</h3>
+                            <h3 class="card-header w-100 device_family" id="{{deviceFamily}}">{{deviceFamily}}</h3>
                             <div class="card-body d-flex flex-column justify-content-top w-100 h-100">
                                 <canvas id="myChart2_{{deviceFamily}}" class="mb-3"></canvas>
                                 <div class="d-flex flex-nowrap justify-content-between align-items-center">
