--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -25,15 +25,15 @@
                        
                     <div id="listDevice" class="w-100" style="margin-bottom: 1em;">
                         <div id="listDeviceTable" class="table-responsive w-100 h-100">
-                            <table class="table table-striped table-bordered table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true" style="height: 100px;">
+                            <table class="table table-bordered table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true" style="height: 100px;">
                                 
                                 <thead class="w-100 align-middle">
                                     <tr class="h-100 w-100 align-middle" id="deviceTableTitle">
                                         <th scope="col"></th>
                                         <th scope="col" class="h-100 p-0 text-nowrap">
-                                            <div class="h-100 d-flex justify-content-between input-group flex-nowrap text-center align-items-center ps-2">
-                                                <div class="w-100">{{ 'Serial Number'|trans }}</div>
-                                                <span class="btn btn-light text-dark h-100 p-1" style="border-radius: 0;" type="button"><i class="h-100 fa-solid fa-arrow-up-a-z d-flex align-items-center" id="snSort" onclick=sortTable(1)></i></span>
+                                            <div class="h-100 d-flex justify-content-center input-group flex-nowrap text-center align-items-center ps-2">
+                                                <span class="me-1">{{ 'Serial Number'|trans }}</span>
+                                                <i class="h-100 fa-solid fa-arrow-up-a-z d-flex align-items-center" id="snSort" onclick=sortTable(1)></i>
                                             </div>
                                         
                                         </th>
@@ -65,9 +65,7 @@
                                         {% endif %}
 
                                         </th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
+                                        <th colspan="3"></th>
                                         <th id='test_zone_0'>
                                             {% if is_granted("ROLE_SAV")%}
                                                 <div class="input-group d-flex flex-nowrap align-items-stretch justify-content-center">
@@ -78,12 +76,7 @@
                                                 </div>
                                             {% endif %}
                                         </th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        {% if is_granted("ROLE_GOE") %}
-                                        <th></th>
-                                        {% endif %}
+                                        <th colspan="5"></th>
                                     </tr>
                                 </thead>
                                 
