--- a/templates/includes/_footer.html.twig
+++ b/templates/includes/_footer.html.twig
@@ -1,40 +1,41 @@
 <footer class="container-fluid footer text-center text-white">
 <div class="d-flex justify-content-around p-2">
     <!-- Social Icons -->
-    <div class="d-flex flex-column justify-content-between align-items-center">
+    <div class="d-flex flex-column justify-content-center align-items-center col-6">
 
         <img src="{{asset('img/LOGO_WK/wk_main.svg')}}" alt="Logo Footer" width="100em" height="auto">
 
-        <div class="footer-mail-icons text-center d-flex justify-content-around">
+        <div class="footer-mail-icons text-center d-flex justify-content-around w-50 pt-1">
                 <!-- Facebook -->
-        <a class="btn btn-outline-light btn-floating btn-icon m-1 border border-0" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating btn-icon border border-0" href="#!" role="button"
             ><i class="fab fa-facebook-f"></i
         ></a>
 
         <!-- Twitter -->
-        <a class="btn btn-outline-light btn-floating btn-icon m-1 border border-0" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating btn-icon border border-0" href="#!" role="button"
             ><i class="fab fa-twitter"></i
         ></a>
 
         <!-- Instagram -->
-        <a class="btn btn-outline-light btn-floating btn-icon m-1 border border-0" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating btn-icon border border-0" href="#!" role="button"
             ><i class="fab fa-instagram"></i
         ></a>
 
         <!-- Linkedin -->
-        <a class="btn btn-outline-light btn-floating btn-icon m-1 border border-0" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating btn-icon border border-0" href="#!" role="button"
             ><i class="fab fa-linkedin-in"></i
         ></a>
         </div>
     </div>
     <!-- Adress -->
-    <div class="footer-mail-items footer-mail-adress">
-        <h6 class="text-uppercase fw-bold mb-1">{{ "Contact"|trans}}</h6>
-        <div class="text-start">
-            <div class="footer-mail-item"><i class="fas fa-home me-3 text-secondary"></i> 20 Avenue Victor Hugo</div>
-            <div class="footer-mail-item"><i class="fas fa-home me-3" style="color: transparent;"></i> 64200 Biarritz - France</div>
-            <div class="footer-mail-item"><i class="fas fa-phone me-3 text-secondary"></i> 0483661666</div>
-            <div class="footer-mail-item"><i class="fas fa-envelope me-3 text-secondary"></i> hello@winback.com</div>
+    <div class="footer-mail-items footer-mail-adress d-flex flex-column justify-content-center align-items-center col-6">
+        
+        <div class="w-50 d-flex flex-column align-items-center justify-content-center">
+            <div class="d-flex justify-content-left w-100"><h6 class="text-uppercase fw-bold mb-1">{{ "Contact"|trans}}</h6></div>
+            <div class="d-flex justify-content-left input-group flex-nowrap align-items-center"><i class="fas fa-home me-1 text-secondary"></i><span class="text-start">20 Avenue Victor Hugo</span></div>
+            <div class="d-flex justify-content-left input-group flex-nowrap align-items-center"><i class="fas fa-home me-1" style="color: transparent;"></i><span class="text-start">64200 Biarritz - France</span></div>
+            <div class="d-flex justify-content-left input-group flex-nowrap align-items-center"><i class="fas fa-phone me-1 text-secondary"></i><span class="text-start">0483661666</span></div>
+            <div class="d-flex justify-content-left input-group flex-nowrap align-items-center"><i class="fas fa-envelope me-1 text-secondary"></i><span class="text-start">hello@winback.com</span></div>
         </div>
     </div>
 </div>
